<resources>
    <string name="app_name">בטיחות</string>
    <string name="add_photo">הוסף תמונה</string>
    <string name="search_section_or_words">חפש סעיף או מילים</string>
    <string name="priority">קדימות</string>
    <string name="study_place_details">פרטי המוסד</string>
    <string name="finding">ממצא</string>
    <string name="requirement">דרישה</string>
    <string name="problem_description">תיאור הבעיה</string>
    <string name="problem_location">מיקום הבעיה</string>
    <string name="tester_details">פרטי הבודק</string>
    <string name="institution_symbol">סמל המוסד</string>
    <string name="city">עיר</string>
    <string name="place_name">שם המוסד</string>
    <string name="symbol">סמל המוסד</string>
    <string name="address">כתובת המוסד</string>
    <string name="ownership">בעלות</string>
    <string name="students_number">מספר תלמידים</string>
    <string name="founding_year">שנת הקמה</string>
    <string name="study_place_phone">טלפון המוסד</string>
    <string name="manager_details">פרטי המנהל/ת</string>
    <string name="inspector_details">פרטי המפקח/ת הכללי</string>
    <string name="study_place_participants">משתתפים מטעם המוסד החינוכי</string>
    <string name="authority_participants">שתתפים מטעם הרשות/הבעלות</string>
    <string name="date">תאריך</string>
    <string name="school">בית ספר</string>
    <string name="kindergarten">גן ילדים</string>
    <string name="boarding_school">פנימייה</string>
    <string name="youth_village">כפר נוער</string>
    <string name="educationalInstitution">מוסד לימודי</string>
    <string name="confirm">אישור</string>
    <string name="cancel">ביטול</string>
    <string name="saved_successfully">נשמר בהצלחה</string>
    <string name="delete_study_place">מחיקת מוסד לימודים זה , תוביל למחיקת כל הדוחות השמורים. האם ברצונך להמשיך?</string>
    <string name="delete_report">מחיקת דו"ח זה , תוביל למחיקת כל הדוחות השמורים. האם ברצונך להמשיך?</string>
    <string name="delete_finding">למחוק ממצא זה?</string>
    <string name="deleted_successfully">נמחק בהצלחה</string>
    <string name="to_conclude">לסיכום</string>

    <string name="test_area">תחום הבדיקה</string>
    <string name="frequency">תדירות</string>
    <string name="examine_body">הגוף המקצועי הבודק והמאשר</string>


    <string name="sectionInAssessmentList">סעיף ברשימת מבדק</string>
    <string name="problem">הממצא, מהותו ומיקומו</string>
    <string name="pic">תמונה</string>
    <string name="section">סעיף</string>


    <!--    operations-->
    <string name="edit">לערוך</string>
    <string name="delete">למחוק</string>
    <string name="export_word">לייצא לword</string>
    <string name="export_pdf">לייצא לpdf</string>

    <!-- image operations   -->
    <string name="select_photo">העלאת תמונה</string>
    <string name="take_photo">צילום תמונה</string>
    <string-array name="photo_operations">
        <item>@string/select_photo</item>
        <item>@string/take_photo</item>
    </string-array>

    <!--    e- edit e-export_word d-delete    -->
    <string-array name="esd">
        <item>@string/edit</item>
        <item>@string/export_word</item>
        <item>@string/export_pdf</item>
        <item>@string/delete</item>
    </string-array>

    <string name="permission_not_granted">יש צורך לאשר כדי להמשיך</string>

    <string-array name="priority_array">
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>

    <string-array name="hozer_types">
        <item>@string/school</item>
        <item>@string/kindergarten</item>
        <item>@string/boarding_school</item>
        <item>@string/youth_village</item>
    </string-array>
    <string name="title_activity_create_finding_screen">CreateFindingScreen</string>

</resources>